2004-07-06  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gobject-spec.scm: Same.

	* gnome/gobject/gw-spec-utils.scm: Make sure that gw:error is
	passed the wrapped var, not the scm var -- they are of different
	types.

2004-07-01  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/glib.scm: Include #:use-module (gnome gobject) before the
	generated wrapsets (fixes segfault).

	* gnome/gobject/gw-spec-utils.scm (unwrap-null-check): Bugfix;
	conversion code was always executed, even when null-ok and the
	pointer actually was NULL. This is now named unwrap-null-checked
	and takes the actual unwrap code as extra parameter.
 
2004-06-30  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.c (scm_gtype_instance_print): Same bug.

	* gnome/gobject/gvalue.c (scm_gvalue_print): I got bit by !SCM.
	Use SCM_FALSEP instead.

	* gnome/gobject/gtype.c: Yikes, somehow Martin's copyright notice
	got lost in the file split! Put back on all files.

	* gnome/gobject/gvalue.c (scm_gvalue_print): Indentation fix.

2004-06-24  Andreas Rottmann  <a.rottmann@gmx.at>

	* test-suite/guile-gobject-test: Include (gnome gobject) in
	use-modules before the generated wrapset (fixes segfault).
	
	* gnome/gw/glib-spec.scm, gnome/gw/gobject-spec.scm,
	* test-suite/gw-test-gobject-spec.scm, 
	* test-suite/gw-test-glib-spec.scm: Adapted for G-Wrap "depends-on!"
	API change.

2004-05-19  Andy Wingo  <wingo@pobox.com>

	* ChangeLog: All changelogs have been merged, and the entries that
	don't deal with the GLib/GObject wrapper have been elided. Some
	directories were corrected.

	* gnome/gobject/gparameter.scm (gnome): Export gparameter: limits.

	* gnome/gobject/gparameter.c (scm_init_gnome_gobject_parameters):
	Changed gruntime:int-max and friends to be gparameter:int-max,
	etc.

	* Makefile.am, files.ac, guile-gobject-uninstalled.pc.in: Revive
	this pkg-config file. See pkg-config(1) for more info.

	* gnome/gobject/gw-spec-utils.scm: Wrap GObjectClass. This is used