@@ -1,3 +1,13 @@
+2004-07-07  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/gobject-spec.scm (unwrap-value-cg): Whoops, call
+	wrapped-var on the right thing.
+
+	* gnome/gobject/gw-spec-utils.scm (unwrap-value-cg): For enums and
+	flags, use scm_scm_to_gvalue() instead of rolling our own
+	conversion. Also fixes problems when the current module doesn't
+	import GOOPS.
+
 2004-07-06  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/gobject-spec.scm: Same.
